--- a/src/style.css
+++ b/src/style.css
@@ -4,8 +4,8 @@
   font-weight: 400;
 
   color-scheme: light dark;
-  color: rgba(255, 255, 255, 0.87);
-  background-color: #242424;
+  color: rgb(255, 255, 255);
+  background-color: rgb(78, 25, 20);
 
   font-synthesis: none;
   text-rendering: optimizeLegibility;
@@ -15,11 +15,11 @@
 
 a {
   font-weight: 500;
-  color: #646cff;
+  color: #dbdbdb;
   text-decoration: inherit;
 }
 a:hover {
-  color: #535bf2;
+  color: #f25353;
 }
 
 body {
@@ -47,7 +47,7 @@ button {
   transition: border-color 0.25s;
 }
 button:hover {
-  border-color: #646cff;
+  border-color: #ff6464;
 }
 button:focus,
 button:focus-visible {
@@ -67,13 +67,13 @@ button:focus-visible {
 
 @media (prefers-color-scheme: light) {
   :root {
-    color: #213547;
-    background-color: #ffffff;
+    color: #ffffff;
+    background-color: #6e0808;
   }
   a:hover {
-    color: #747bff;
+    color: #ff7474;
   }
   button {
-    background-color: #f9f9f9;
+    background-color: #c75252;
   }
 }
